# minizip

./: CMakeLists.txt  README.md  miniunz.c  minizip.c
cmake/: Dependencies.cmake
